--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,6 +19,6 @@
   </div>
 
   <div class="footer-col">
-    <p>{{ site.description | escape }}</p>
+    <p>That’s one small step for a man, one giant leap for mankind.</p>
   </div>
 </div>
